Add ore vein highlighting (#84)
* Add ore vein highlighting

* Add ore vein locating

* Update README

* Update Cubiomes

* Refactor and simplify chat code

* Switch to Cubiomes master branch

* Add ore vein version check